add statisctic in dashboard
